--- a/SeewoStart.vbproj
+++ b/SeewoStart.vbproj
@@ -1,163 +1,276 @@
 ﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
-    <PropertyGroup>
-        <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-        <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{261376DE-DFD5-4C72-A44C-FAB387A5FCD5}</ProjectGuid>
-        <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{F184B08F-C81C-45F6-A57F-5ABD9991F28F}</ProjectTypeGuids>
-        <OutputType>WinExe</OutputType>
-        <RootNamespace>SeewoStart</RootNamespace>
-        <AssemblyName>SeewoStart</AssemblyName>
-        <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-        <MyType>Custom</MyType>
-        <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-        <Deterministic>true</Deterministic>
-        <TargetFrameworkProfile/>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-        <PlatformTarget>AnyCPU</PlatformTarget>
-        <DebugSymbols>true</DebugSymbols>
-        <DebugType>full</DebugType>
-        <DefineDebug>true</DefineDebug>
-        <DefineTrace>true</DefineTrace>
-        <IncrementalBuild>true</IncrementalBuild>
-        <OutputPath>bin\Debug\</OutputPath>
-        <DocumentationFile>SeewoStart.xml</DocumentationFile>
-        <NoWarn>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036,42314</NoWarn>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-        <PlatformTarget>AnyCPU</PlatformTarget>
-        <DebugType>pdbonly</DebugType>
-        <DebugSymbols>false</DebugSymbols>
-        <DefineDebug>false</DefineDebug>
-        <DefineTrace>true</DefineTrace>
-        <IncrementalBuild>false</IncrementalBuild>
-        <Optimize>true</Optimize>
-        <OutputPath>bin\Release\</OutputPath>
-        <DocumentationFile>SeewoStart.xml</DocumentationFile>
-        <NoWarn>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036,42314</NoWarn>
-    </PropertyGroup>
-    <PropertyGroup>
-        <OptionExplicit>On</OptionExplicit>
-    </PropertyGroup>
-    <PropertyGroup>
-        <OptionCompare>Binary</OptionCompare>
-    </PropertyGroup>
-    <PropertyGroup>
-        <OptionStrict>Off</OptionStrict>
-    </PropertyGroup>
-    <PropertyGroup>
-        <OptionInfer>On</OptionInfer>
-    </PropertyGroup>
-    <PropertyGroup>
-        <ApplicationIcon>sbenlauncher.ico</ApplicationIcon>
-    </PropertyGroup>
-    <PropertyGroup>
-        <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
-    </PropertyGroup>
-    <ItemGroup>
-        <Reference Include="SVGImage, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-            <HintPath>packages\SVGImage.3.0.0\lib\net47\SVGImage.dll</HintPath>
-        </Reference>
-        <Reference Include="System.Core"/>
-        <Reference Include="System.Drawing"/>
-        <Reference Include="System.Xml.Linq"/>
-        <Reference Include="System.Data.DataSetExtensions"/>
-        <Reference Include="System"/>
-        <Reference Include="System.Data"/>
-        <Reference Include="System.Xml"/>
-        <Reference Include="System.Xaml">
-            <RequiredTargetFramework>4.0</RequiredTargetFramework>
-        </Reference>
-        <Reference Include="WindowsBase"/>
-        <Reference Include="PresentationCore"/>
-        <Reference Include="PresentationFramework"/>
-        <Reference Include="System.Net.Http"/>
-    </ItemGroup>
-    <ItemGroup>
-        <ApplicationDefinition Include="Application.xaml">
-            <Generator>MSBuild:Compile</Generator>
-            <SubType>Designer</SubType>
-        </ApplicationDefinition>
-        <Compile Include="Class1.vb"/>
-        <Compile Include="Window1.xaml.vb">
-            <DependentUpon>Window1.xaml</DependentUpon>
-        </Compile>
-        <Compile Include="Window2.xaml.vb">
-            <DependentUpon>Window2.xaml</DependentUpon>
-        </Compile>
-        <Page Include="MainWindow.xaml">
-            <Generator>MSBuild:Compile</Generator>
-            <SubType>Designer</SubType>
-        </Page>
-        <Compile Include="Application.xaml.vb">
-            <DependentUpon>Application.xaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-        <Compile Include="MainWindow.xaml.vb">
-            <DependentUpon>MainWindow.xaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-        <Page Include="Window1.xaml">
-            <SubType>Designer</SubType>
-            <Generator>MSBuild:Compile</Generator>
-        </Page>
-        <Page Include="Window2.xaml">
-            <SubType>Designer</SubType>
-            <Generator>MSBuild:Compile</Generator>
-        </Page>
-    </ItemGroup>
-    <ItemGroup>
-        <Import Include="System.Threading.Tasks"/>
-        <Import Include="System.Linq"/>
-        <Import Include="System.Xml.Linq"/>
-        <Import Include="Microsoft.VisualBasic"/>
-        <Import Include="System"/>
-        <Import Include="System.Collections"/>
-        <Import Include="System.Collections.Generic"/>
-        <Import Include="System.Diagnostics"/>
-        <Import Include="System.Windows"/>
-        <Import Include="System.Windows.Controls"/>
-        <Import Include="System.Windows.Data"/>
-        <Import Include="System.Windows.Documents"/>
-        <Import Include="System.Windows.Input"/>
-        <Import Include="System.Windows.Shapes"/>
-        <Import Include="System.Windows.Media"/>
-        <Import Include="System.Windows.Media.Imaging"/>
-        <Import Include="System.Windows.Navigation"/>
-    </ItemGroup>
-    <ItemGroup>
-        <Compile Include="My Project\AssemblyInfo.vb">
-            <SubType>Code</SubType>
-        </Compile>
-        <Compile Include="My Project\MyExtensions\MyWpfExtension.vb">
-            <VBMyExtensionTemplateID>Microsoft.VisualBasic.WPF.MyExtension</VBMyExtensionTemplateID>
-            <VBMyExtensionTemplateVersion>1.0.0.0</VBMyExtensionTemplateVersion>
-        </Compile>
-        <Compile Include="My Project\Resources.Designer.vb">
-            <AutoGen>True</AutoGen>
-            <DesignTime>True</DesignTime>
-            <DependentUpon>Resources.resx</DependentUpon>
-        </Compile>
-        <Compile Include="My Project\Settings.Designer.vb">
-            <AutoGen>True</AutoGen>
-            <DependentUpon>Settings.settings</DependentUpon>
-            <DesignTimeSharedInput>True</DesignTimeSharedInput>
-        </Compile>
-        <EmbeddedResource Include="My Project\Resources.resx">
-            <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
-            <LastGenOutput>Resources.Designer.vb</LastGenOutput>
-            <CustomToolNamespace>My.Resources</CustomToolNamespace>
-        </EmbeddedResource>
-        <None Include="My Project\app.manifest"/>
-        <None Include="My Project\Settings.settings">
-            <Generator>SettingsSingleFileGenerator</Generator>
-            <LastGenOutput>Settings.Designer.vb</LastGenOutput>
-        </None>
-        <None Include="packages.config"/>
-    </ItemGroup>
-    <ItemGroup>
-        <None Include="App.config"/>
-    </ItemGroup>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets"/>
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+  <PropertyGroup>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProjectGuid>{261376DE-DFD5-4C72-A44C-FAB387A5FCD5}</ProjectGuid>
+    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{F184B08F-C81C-45F6-A57F-5ABD9991F28F}</ProjectTypeGuids>
+    <OutputType>WinExe</OutputType>
+    <RootNamespace>SeewoStart</RootNamespace>
+    <AssemblyName>SeewoStart</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <MyType>Custom</MyType>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <DefineDebug>true</DefineDebug>
+    <DefineTrace>true</DefineTrace>
+    <IncrementalBuild>true</IncrementalBuild>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DocumentationFile>SeewoStart.xml</DocumentationFile>
+    <NoWarn>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036,42314</NoWarn>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugType>pdbonly</DebugType>
+    <DebugSymbols>false</DebugSymbols>
+    <DefineDebug>false</DefineDebug>
+    <DefineTrace>true</DefineTrace>
+    <IncrementalBuild>false</IncrementalBuild>
+    <Optimize>true</Optimize>
+    <OutputPath>bin\Release\</OutputPath>
+    <DocumentationFile>SeewoStart.xml</DocumentationFile>
+    <NoWarn>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036,42314</NoWarn>
+  </PropertyGroup>
+  <PropertyGroup>
+    <OptionExplicit>On</OptionExplicit>
+  </PropertyGroup>
+  <PropertyGroup>
+    <OptionCompare>Binary</OptionCompare>
+  </PropertyGroup>
+  <PropertyGroup>
+    <OptionStrict>Off</OptionStrict>
+  </PropertyGroup>
+  <PropertyGroup>
+    <OptionInfer>On</OptionInfer>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>default-img\sbenlauncher.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
+  </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.Xaml.Behaviors, Version=1.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.Xaml.Behaviors.Wpf.1.1.39\lib\net45\Microsoft.Xaml.Behaviors.dll</HintPath>
+    </Reference>
+    <Reference Include="SVGImage, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\SVGImage.3.0.0\lib\net47\SVGImage.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xaml">
+      <RequiredTargetFramework>4.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="WindowsBase" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
+    <Reference Include="System.Net.Http" />
+  </ItemGroup>
+  <ItemGroup>
+    <ApplicationDefinition Include="Application.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </ApplicationDefinition>
+    <Compile Include="Class1.vb" />
+    <Compile Include="dl.xaml.vb">
+      <DependentUpon>dl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Emergency-mode.xaml.vb">
+      <DependentUpon>Emergency-mode.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="error114.xaml.vb">
+      <DependentUpon>error114.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Module2.vb" />
+    <Compile Include="mp42.xaml.vb">
+      <DependentUpon>mp42.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="mp4.xaml.vb">
+      <DependentUpon>mp4.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="update.xaml.vb">
+      <DependentUpon>update.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Window1.xaml.vb">
+      <DependentUpon>Window1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Window2.xaml.vb">
+      <DependentUpon>Window2.xaml</DependentUpon>
+    </Compile>
+    <Page Include="dl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Emergency-mode.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="error114.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MainWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Compile Include="Application.xaml.vb">
+      <DependentUpon>Application.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="MainWindow.xaml.vb">
+      <DependentUpon>MainWindow.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Page Include="mp42.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="mp4.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="update.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Window1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Window2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Import Include="System.Threading.Tasks" />
+    <Import Include="System.Linq" />
+    <Import Include="System.Xml.Linq" />
+    <Import Include="Microsoft.VisualBasic" />
+    <Import Include="System" />
+    <Import Include="System.Collections" />
+    <Import Include="System.Collections.Generic" />
+    <Import Include="System.Diagnostics" />
+    <Import Include="System.Windows" />
+    <Import Include="System.Windows.Controls" />
+    <Import Include="System.Windows.Data" />
+    <Import Include="System.Windows.Documents" />
+    <Import Include="System.Windows.Input" />
+    <Import Include="System.Windows.Shapes" />
+    <Import Include="System.Windows.Media" />
+    <Import Include="System.Windows.Media.Imaging" />
+    <Import Include="System.Windows.Navigation" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="My Project\AssemblyInfo.vb">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="My Project\MyExtensions\MyWpfExtension.vb">
+      <VBMyExtensionTemplateID>Microsoft.VisualBasic.WPF.MyExtension</VBMyExtensionTemplateID>
+      <VBMyExtensionTemplateVersion>1.0.0.0</VBMyExtensionTemplateVersion>
+    </Compile>
+    <Compile Include="My Project\Resources.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="My Project\Settings.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <EmbeddedResource Include="My Project\Resources.resx">
+      <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.vb</LastGenOutput>
+      <CustomToolNamespace>My.Resources</CustomToolNamespace>
+    </EmbeddedResource>
+    <Resource Include="Font\DingTalk_JinBuTi_Regular.ttf" />
+    <Resource Include="Font\HarmonyOS_Sans_SC_Black.ttf" />
+    <Resource Include="Font\HarmonyOS_Sans_SC_Light.ttf" />
+    <None Include="My Project\app.manifest" />
+    <None Include="My Project\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.vb</LastGenOutput>
+    </None>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\9月29日.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\ys.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\21575308-97b1-4de5-a96d-ad44f74273d9.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\21575308-97b1-4de5-a96d-ad44f74273d9-removebg-preview.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\splash-removebg-preview.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\sbenlauncher.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\b0c3046c3d49402eab72a743423506ca.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\background2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\srlogo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\9919.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\B410DE00D65BC04A8011DAB4DFF06945.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\background.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\errorbackground.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\1402.ico" />
+    <Resource Include="default-img\1405.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\81.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="default-img\1030.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\1035-1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="default-img\1036-1.bmp" />
+  </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
