--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-    <package id="SVGImage" version="3.0.0" targetFramework="net472"/>
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net472" />
+  <package id="SVGImage" version="3.0.0" targetFramework="net472" />
 </packages>
